--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
 @import 'tailwindcss';
 @plugin "daisyui";
+@plugin 'flowbite/plugin';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
+@source "../node_modules/flowbite-svelte/dist";
+@source "../node_modules/flowbite-svelte-icons/dist";
