--- a/src/app.css
+++ b/src/app.css
@@ -1,2 +1,4 @@
 @import 'tailwindcss';
 @plugin "daisyui";
+@source "../node_modules/flowbite-svelte/dist";
+@source "../node_modules/flowbite-svelte-icons/dist";
