--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import "tailwindcss/utilities";
 @plugin "daisyui";
 @source "../node_modules/flowbite-svelte/dist";
 @source "../node_modules/flowbite-svelte-icons/dist";
