--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import "tailwindcss/utilities";
+@import 'tailwind-scrollbar-hide/v4';
 @plugin "daisyui";
 @source "../node_modules/flowbite-svelte/dist";
 @source "../node_modules/flowbite-svelte-icons/dist";
